--- a/index.html
+++ b/index.html
@@ -39,9 +39,273 @@
     </div>
   </div>
 </nav>
-
-
 <br>
+
+<div style="padding:20px">
+<div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <div class="card-body">
+    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <p class="card-text">
+<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+  </div>
+</div>
+</div>
+
+
+
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive2" aria-labelledby="offcanvasResponsiveLabel2">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel2">Pros and Cons</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive2" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul><br>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<li>TFT display</li>
+<li>No HDR support</li>
+<li>8 MP front camera</li>
+<li>Decent GPU</li></ul>
+    <p class="mb-0"></p>
+  </div>
+</div>
+
+
+<div style="padding:20px">
+<div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <div class="card-body">
+    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <p class="card-text">
+<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive3" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+  </div>
+</div>
+</div>
+
+
+
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive3" aria-labelledby="offcanvasResponsiveLabel3">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel3">Pros and Cons</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive3" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul><br>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<li>TFT display</li>
+<li>No HDR support</li>
+<li>8 MP front camera</li>
+<li>Decent GPU</li></ul>
+    <p class="mb-0"></p>
+  </div>
+</div>
+
+
+<div style="padding:20px">
+<div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <div class="card-body">
+    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <p class="card-text">
+<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive4" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+  </div>
+</div>
+</div>
+
+
+
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive4" aria-labelledby="offcanvasResponsiveLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel4">Pros and Cons</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive4" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul><br>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<li>TFT display</li>
+<li>No HDR support</li>
+<li>8 MP front camera</li>
+<li>Decent GPU</li></ul>
+    <p class="mb-0"></p>
+  </div>
+</div>
+
+
+<div style="padding:20px">
+<div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <div class="card-body">
+    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <p class="card-text">
+<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive5" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+  </div>
+</div>
+</div>
+
+
+
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive5" aria-labelledby="offcanvasResponsiveLabel5">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel5">Pros and Cons</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive5" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul><br>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<li>TFT display</li>
+<li>No HDR support</li>
+<li>8 MP front camera</li>
+<li>Decent GPU</li></ul>
+    <p class="mb-0"></p>
+  </div>
+</div>
+
+
+<div style="padding:20px">
+<div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <div class="card-body">
+    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <p class="card-text">
+<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive6" aria-controls="offcanvasResponsive6">Pros and Cons</button><br><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+  </div>
+</div>
+</div>
+
+
+
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive6" aria-labelledby="offcanvasResponsiveLabel6">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel6">Pros and Cons</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<li>400 pixels per inch </li>
+<li>120 Hz refresh rate</li>
+<li>Gorila glass 5 protection</li>
+<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>UFS 2.2</li>
+<li>One UI 4.1 </li>
+<li>25 Watt fast charging </li>
+<li>50 MP back camera </li>
+<li>Ultra wide and macro camera</li>
+<li>4k recording</li>
+<li>NFC</li>
+<li>5G</li>
+<li>Headphone jack</li>
+<li>Dolby atmos </li>
+<li>5.1 Bluetooth support </li>
+</ul><br>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<li>TFT display</li>
+<li>No HDR support</li>
+<li>8 MP front camera</li>
+<li>Decent GPU</li></ul>
+    <p class="mb-0"></p>
+  </div>
+</div>
+
+
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
   <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
