--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 <div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive6" aria-labelledby="offcanvasResponsiveLabel6">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasResponsiveLabel6">Pros and Cons</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive6" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
 
