--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
-  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <img src="https://rukminim1.flixcart.com/image/1100/1100/l2p23rk0/mobile/s/4/3/-original-imagdznhcbdfwfud.jpeg?q=20" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
-    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <h5 class="card-title">Vivo T1 44W</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive3" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
@@ -149,9 +149,9 @@
 
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
-  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <img src="https://rukminim1.flixcart.com/image/850/850/xif0q/mobile/q/8/t/-original-imaghberfw4ghzxy.jpeg?q=20" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
-    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <h5 class="card-title">Realme 9i 5g</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive4" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
@@ -202,9 +202,9 @@
 
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
-  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <img src="https://m.media-amazon.com/images/I/412VyMavsJL._AC_SY1000_FMwebp_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
-    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <h5 class="card-title"Redmi 11 prime 5g</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive5" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
@@ -255,9 +255,9 @@
 
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
-  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <img src="https://rukminim1.flixcart.com/image/1082/1082/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=90" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
-    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <h5 class="card-title">Poco M4 pro 5g</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive6" aria-controls="offcanvasResponsive6">Pros and Cons</button><br><br>
@@ -308,9 +308,9 @@
 
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
-  <img src="https://m.media-amazon.com/images/I/81xvGbBFNhL._AC_SL1500_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <img src="https://rukminim1.flixcart.com/image/850/850/l51d30w0/mobile/n/y/v/-original-imagfsuftgdf6jxe.jpeg?q=20" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
-    <h5 class="card-title">Samsung Galaxy M33 5g</h5>
+    <h5 class="card-title">Motorola G42</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
