--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <div class="card" style="width: 18rem;">
   <img src="https://m.media-amazon.com/images/I/412VyMavsJL._AC_SY1000_FMwebp_.jpg" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
   <div class="card-body">
-    <h5 class="card-title"Redmi 11 prime 5g</h5>
+    <h5 class="card-title">Redmi 11 prime 5g</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive5" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
@@ -255,12 +255,12 @@
 
 <div style="padding:20px">
 <div class="card" style="width: 18rem;">
-  <img src="https://rukminim1.flixcart.com/image/1082/1082/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=90" class="card-img-top" alt="" style="width:50%;height:30%;padding:15px">
+  <img src="https://rukminim1.flixcart.com/image/1082/1082/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=90" class="card-img-top" alt="" style="width:42%;height:22%;padding:15px">
   <div class="card-body">
     <h5 class="card-title">Poco M4 pro 5g</h5>
     <p class="card-text">
 <li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
-   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive6" aria-controls="offcanvasResponsive6">Pros and Cons</button><br><br>
+   <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive6" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
