--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
   <div class="offcanvas-body">
 
-<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code><br>
 <li>400 pixels per inch </li>
 <li>120 Hz refresh rate</li>
 <li>Gorila glass 5 protection</li>
@@ -84,7 +84,7 @@
 <li>Dolby atmos </li>
 <li>5.1 Bluetooth support </li>
 </ul><br>
-<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
+<ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code><br>
 <li>TFT display</li>
 <li>No HDR support</li>
 <li>8 MP front camera</li>
@@ -120,28 +120,20 @@
   </div>
   <div class="offcanvas-body">
 
-<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
-<li>400 pixels per inch </li>
-<li>120 Hz refresh rate</li>
-<li>Gorila glass 5 protection</li>
-<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
-<li>UFS 2.2</li>
-<li>One UI 4.1 </li>
-<li>25 Watt fast charging </li>
+<ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code><br>
+<li>409 pixels per inch </li>
+<li>AMOLED display</li>
+<li>44 watt fast charging</li>
 <li>50 MP back camera </li>
-<li>Ultra wide and macro camera</li>
-<li>4k recording</li>
-<li>NFC</li>
-<li>5G</li>
 <li>Headphone jack</li>
-<li>Dolby atmos </li>
-<li>5.1 Bluetooth support </li>
+<li>16 MP front camera </li>
 </ul><br>
 <ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
-<li>TFT display</li>
-<li>No HDR support</li>
-<li>8 MP front camera</li>
-<li>Decent GPU</li></ul>
+<li>Decent processor (Qualcomm Snapdragon 680)</li>
+<li>Decent GPU</li>
+<li>No 5g support</li>
+<li>60 Hz refresh rate</li>
+<li>External apps may be found in Fountouch 12 OS</li></ul>
     <p class="mb-0"></p>
   </div>
 </div>
