--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="card-body">
     <h5 class="card-title">Samsung Galaxy M33 5g</h5>
     <p class="card-text">
-<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+<li>6/8 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
@@ -73,6 +73,7 @@
 <li>Gorila glass 5 protection</li>
 <li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
 <li>UFS 2.2</li>
+<li>6000 mAh battery</li>
 <li>One UI 4.1 </li>
 <li>25 Watt fast charging </li>
 <li>50 MP back camera </li>
@@ -100,7 +101,7 @@
   <div class="card-body">
     <h5 class="card-title">Vivo T1 44W</h5>
     <p class="card-text">
-<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+<li>4/6/8 GB RAM</li><li>Snapdragon 680 (2.4 GHz) </li><li>128 GB storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive3" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
@@ -127,6 +128,7 @@
 <li>50 MP back camera </li>
 <li>Headphone jack</li>
 <li>16 MP front camera </li>
+<li>Decent 5000 mAh battery</li>
 </ul><br>
 <ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
 <li>Decent processor (Qualcomm Snapdragon 680)</li>
