--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p class="card-text">
 <li>6/8 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
+<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications >> </a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/samsung-galaxy-m33-5g-price-in-india?ty=gallery#gallery-7" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
