--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
   <div class="card-body">
     <h5 class="card-title">Realme 9i 5g</h5>
     <p class="card-text">
-<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+<li>4/6 GB RAM</li><li>Dimensity 810 5g processor (2.4 GHz) </li><li>64/128 GB storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive4" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
-<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications</a><br>
+<a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=gallery#gallery-8" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
 </div>
@@ -168,27 +168,23 @@
   <div class="offcanvas-body">
 
 <ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
-<li>400 pixels per inch </li>
-<li>120 Hz refresh rate</li>
-<li>Gorila glass 5 protection</li>
-<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
-<li>UFS 2.2</li>
-<li>One UI 4.1 </li>
-<li>25 Watt fast charging </li>
+<li>IPS LCD Display</li>
+<li>400 ppi </li>
+<li>90 Hz display</li>
+<li>Dimensity 810 5g processor with 2.4 Ghz max clock speed</li>
+<li>ARM Mali-G57 MC2 GPU</li>
+<li>Realme UI 3.0</li>
+<li>5000 mAh decent battery</li>
 <li>50 MP back camera </li>
-<li>Ultra wide and macro camera</li>
-<li>4k recording</li>
-<li>NFC</li>
-<li>5G</li>
+<li>Macro camera</li>
+<li>5G support</li>
 <li>Headphone jack</li>
-<li>Dolby atmos </li>
-<li>5.1 Bluetooth support </li>
 </ul><br>
 <ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
-<li>TFT display</li>
+<li>18 watt fast charger</li>
 <li>No HDR support</li>
 <li>8 MP front camera</li>
-<li>Decent GPU</li></ul>
+<li>No Gyroscope support</li></ul>
     <p class="mb-0"></p>
   </div>
 </div>
