--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 <li>Decent GPU</li>
 <li>No 5g support</li>
 <li>60 Hz refresh rate</li>
+<li>No ultrawide camera</li>
 <li>External apps may be found in Fountouch 12 OS</li></ul>
     <p class="mb-0"></p>
   </div>
@@ -184,6 +185,7 @@
 <li>18 watt fast charger</li>
 <li>No HDR support</li>
 <li>8 MP front camera</li>
+<li>No ultra wide camera</li>
 <li>No Gyroscope support</li></ul>
     <p class="mb-0"></p>
   </div>
