--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div class="card-body">
     <h5 class="card-title">Realme 9i 5g</h5>
     <p class="card-text">
-<li>4/6 GB RAM</li><li>Dimensity 810 5g processor (2.4 GHz) </li><li>64/128 GB storage</li></p>
+<li>4/6 GB RAM</li><li>Dimensity 810 5g (2.4 GHz) </li><li>64/128 GB storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive4" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=gallery#gallery-8" type="">All photos</a><br>
