--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
   <div class="card-body">
     <h5 class="card-title">Redmi 11 prime 5g</h5>
     <p class="card-text">
-<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+<li>4/6 GB DDR4X RAM</li><li>Dimensity 700 5g (2.2 GHz) </li><li>64/128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive5" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
-<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a style="display:inline-block" href="https://www.91mobiles.com/xiaomi-redmi-11-prime-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >> </a><br>
+<a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/xiaomi-redmi-11-prime-5g-price-in-india?ty=gallery#gallery-9" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
 </div>
@@ -219,27 +219,24 @@
   <div class="offcanvas-body">
 
 <ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
+<li>IPS LCD display</li>
 <li>400 pixels per inch </li>
-<li>120 Hz refresh rate</li>
-<li>Gorila glass 5 protection</li>
-<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>90 Hz refresh rate</li>
+<li>Corning Gorila glass 3 protection</li>
+<li>Dimensity 700 processor with 2.2 Ghz max clock speed</li>
 <li>UFS 2.2</li>
-<li>One UI 4.1 </li>
-<li>25 Watt fast charging </li>
+<li>Decent GPU Mali-G57 MC2</li>
 <li>50 MP back camera </li>
-<li>Ultra wide and macro camera</li>
-<li>4k recording</li>
-<li>NFC</li>
+<li>5000 mAh decent camera</li>
 <li>5G</li>
 <li>Headphone jack</li>
-<li>Dolby atmos </li>
-<li>5.1 Bluetooth support </li>
 </ul><br>
 <ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
-<li>TFT display</li>
+<li>Some external apps may be found in MIUI 13 UI</li>
 <li>No HDR support</li>
 <li>8 MP front camera</li>
-<li>Decent GPU</li></ul>
+<li>No macro and ultra wide lens</li>
+<li>18 Watt fast charger</li></ul>
     <p class="mb-0"></p>
   </div>
 </div>
