--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <p class="card-text">
 <li>4/6/8 GB RAM</li><li>Snapdragon 680 (2.4 GHz) </li><li>128 GB storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive3" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://www.91mobiles.com/vivo-t1-44w-price-in-india?ty=specs" class="text-secondary" type="">Full specifications</a><br>
+<a style="display:inline-block" href="https://www.91mobiles.com/vivo-t1-44w-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >></a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/vivo-t1-44w-price-in-india?ty=gallery#gallery-9" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
@@ -150,7 +150,7 @@
     <p class="card-text">
 <li>4/6 GB RAM</li><li>Dimensity 810 5g (2.4 GHz) </li><li>64/128 GB storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive4" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications</a><br>
+<a style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >> </a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=gallery#gallery-8" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
