--- a/index.html
+++ b/index.html
@@ -270,26 +270,25 @@
 
 <ul><i class="bi bi-hand-thumbs-up text-success"></i><code class="text-success" > Pros</code>
 <li>400 pixels per inch </li>
-<li>120 Hz refresh rate</li>
-<li>Gorila glass 5 protection</li>
-<li>Exynos 1280 processor with 2.4 Ghz max clock speed</li>
+<li>90 Hz refresh rate</li>
+<li>Gorila glass 3 protection</li>
+<li>Dimensity 810 processor with 2.4 Ghz max clock speed</li>
 <li>UFS 2.2</li>
-<li>One UI 4.1 </li>
-<li>25 Watt fast charging </li>
+<li>IP53 rating</li>
+<li>33 Watt fast charging </li>
 <li>50 MP back camera </li>
-<li>Ultra wide and macro camera</li>
-<li>4k recording</li>
-<li>NFC</li>
+<li>Ultra wide camera</li>
+<li>16 MP front camera</li>
+<li>NFC depends on region</li>
 <li>5G</li>
 <li>Headphone jack</li>
-<li>Dolby atmos </li>
-<li>5.1 Bluetooth support </li>
+<li>MIUI 13</li>
+<li>Stereo speaker</li>
+<li>Mali-G57 MC2 GPU </li>
 </ul><br>
 <ul><i class="bi bi-hand-thumbs-down text-danger"></i><code class="text-danger" > Cons</code>
-<li>TFT display</li>
-<li>No HDR support</li>
-<li>8 MP front camera</li>
-<li>Decent GPU</li></ul>
+<li>Low response time of screen (42 ms)</li>
+<li>No HDR support</li></ul>
     <p class="mb-0"></p>
   </div>
 </div>
