--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
   <div class="card-body">
     <h5 class="card-title">Poco M4 pro 5g</h5>
     <p class="card-text">
-<li>6 GB DDR4X RAM</li><li>Exynos 1280 (2.4 GHz) </li><li>128 GB UFS 2.2 storage</li></p>
+<li>4/6/8 GB DDR4X RAM</li><li>Dimensity 810 (2.4 GHz) </li><li>64/128 GB UFS 2.2 storage</li></p>
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive6" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
-<a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
-<a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
+<a style="display:inline-block" href="https://www.91mobiles.com/poco-m4-pro-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >> </a><br>
+<a class="text-secondary" style="display:inline-block" href="https://www.flipkart.com/full-image-view" type="">All photos</a><br>
 <a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
   </div>
 </div>
