--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications >> </a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/samsung-galaxy-m33-5g-price-in-india?ty=gallery#gallery-7" type="">All photos</a><br>
-<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Want to know which smartphone to buy under 15000 ? #free_demo #chat_with_expert</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Want to know which smartphone to buy under 15000 ? #free_demo #chat_with_expert @ Rs 29/product</a><br>
   </div>
 </div>
 </div>
