--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive3" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://www.91mobiles.com/vivo-t1-44w-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >></a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/vivo-t1-44w-price-in-india?ty=gallery#gallery-9" type="">All photos</a><br>
-<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
-  </div>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Which smartphone will be best for you under 15000 ? #free_demo #chat_with_expert @ Rs 29/product</a><br>
+ </div>
 </div>
 </div>
 
@@ -152,8 +152,8 @@
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive4" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >> </a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/realme-9i-5g-price-in-india?ty=gallery#gallery-8" type="">All photos</a><br>
-<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
-  </div>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Which smartphone will be best for you under 15000 ? #free_demo #chat_with_expert @ Rs 29/product</a><br>
+ </div>
 </div>
 </div>
 
@@ -202,7 +202,7 @@
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive5" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://www.91mobiles.com/xiaomi-redmi-11-prime-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >> </a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.91mobiles.com/xiaomi-redmi-11-prime-5g-price-in-india?ty=gallery#gallery-9" type="">All photos</a><br>
-<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Which smartphone will be best for you under 15000 ? #free_demo #chat_with_expert @ Rs 29/product</a><br>
   </div>
 </div>
 </div>
@@ -252,7 +252,7 @@
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive6" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://www.91mobiles.com/poco-m4-pro-5g-price-in-india?ty=specs" class="text-secondary" type="">Full specifications >> </a><br>
 <a class="text-secondary" style="display:inline-block" href="https://www.flipkart.com/full-image-view" type="">All photos</a><br>
-<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Which smartphone will be best for you under 15000 ? #free_demo #chat_with_expert @ Rs 29/product</a><br>
   </div>
 </div>
 </div>
@@ -304,7 +304,7 @@
    <button style="display:inline-block"class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Pros and Cons</button><br><br>
 <a style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" class="text-secondary" type="">Full specifications</a><br>
 <a class="text-secondary" style="display:inline-block" href="https://nanoreview.net/en/phone/samsung-galaxy-m33" type="">All photos</a><br>
-<a class="text-primary" style="display:inline-block;font-size:14px" href="https://nanoreview.net/en/phone/samsung-galaxy-m33"  type="">Want to know which smartphone to buy?</a><br>
+<a class="text-primary" style="display:inline-block;font-size:14px" href="https://forms.gle/GKrXYQzVDDkwJJDV8"  type="">Which smartphone will be best for you under 15000 ? #free_demo #chat_with_expert @ Rs 29/product</a><br>
   </div>
 </div>
 </div>
