--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="https://user-images.githubusercontent.com/109153289/196019384-a4dcaded-dfc2-4aa8-9338-14c9276ecc4b.png">Pricing</a>
+        <!--  <a class="nav-link" href="https://user-images.githubusercontent.com/109153289/196019384-a4dcaded-dfc2-4aa8-9338-14c9276ecc4b.png">Pricing</a>-->
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
