--- a/form.html
+++ b/form.html
@@ -13,12 +13,12 @@
   <body>
 <!-- Google tag (gtag.js) --> <amp-analytics type="gtag" data-credentials="include"> <script type="application/json"> { "vars": { "gtag_id": "AW-697490472", "config": { "AW-697490472": { "groups": "default" } } }, "triggers": { } } </script> </amp-analytics>
 
-    <h1>Hello !</h1>
+    <h3><i>Answer the following questions to know the best smartphone for you under 15000</i></h3>
 
 
 
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="350" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="430" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
